force-app/main/default/objects/Reference_RA_Employee_Leave__c/Reference_RA_Employee_Leave__c.object-meta.xml
<CustomObject>
    <label>RA - Employee Leave (non-FMLA leave)</label>
    <nameField>
        <displayFormat>REL{0000}</displayFormat>
        <label>Reference RA - Employee Leave Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference RA - Employee Leave</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>