force-app/main/default/objects/Reference_RA_Employee_Leave__c/fields/Discussion_with_Employee__c.field-meta.xml
<CustomField>
    <fullName>Discussion_with_Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide details on how the issue was discussed with the employee.  If not discussed, please explain why.</inlineHelpText>
    <label>Discussion with Employee</label>
    <length>30913</length>
    <type>LongTextArea</type>
</CustomField>