force-app/main/default/objects/Reference_RA_Employee_Leave__c/fields/RA_EE_Leave_Q_11__c.field-meta.xml
<CustomField>
    <fullName>RA_EE_Leave_Q_11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If a request for an extension, describe the previous leave(s) and collect documentation relating to that leave (e.g., leave requests, documentation granting leave or describing the leave, documents reflecting the interactive process, if applicable).</inlineHelpText>
    <label>RA - EE Leave - Q 11</label>
    <length>30913</length>
    <type>LongTextArea</type>
</CustomField>