force-app/main/default/objects/Reference_RA_Employee_Leave__c/fields/RA_EE_Leave_Q_26__c.field-meta.xml
<CustomField>
    <fullName>RA_EE_Leave_Q_26__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Are there other employees on leave in the same department or in similar positions?  If so, provide details, including the types of leave and the estimated return dates, and explain how these leaves impact of the current leave request.</inlineHelpText>
    <label>RA - EE Leave - Q 26</label>
    <length>30913</length>
    <type>LongTextArea</type>
</CustomField>