force-app/main/default/objects/Reference_RA_Employee_Leave__c/fields/RA_EE_Leave_Q_34__c.field-meta.xml
<CustomField>
    <fullName>RA_EE_Leave_Q_34__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To assess potential discrimination allegations, describe in detail any instances in which other employees sought a leave of absence, as well as the outcome. The leave requests need not be identical. Describe the requests, the outcome, employee demographics and position.</inlineHelpText>
    <label>RA - EE Leave - Q 34</label>
    <length>30913</length>
    <type>LongTextArea</type>
</CustomField>