force-app/main/default/objects/Reference_RA_Employee_Leave__c/fields/Title_Position__c.field-meta.xml
<CustomField>
    <fullName>Title_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Include for all parties, if applicable</inlineHelpText>
    <label>Title/Position</label>
    <length>30913</length>
    <type>LongTextArea</type>
</CustomField>